tests/baselines/reference/computedPropertyNames38_ES5(target=es2015).errors.txt
computedPropertyNames38_ES5.ts(8,9): error TS2411: Property '[1 << 6]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.


==== computedPropertyNames38_ES5.ts (1 errors) ====
    class Foo { x }
    class Foo2 { x; y }
    
    class C {
        [s: string]: Foo2;
    
        // Computed properties
        get [1 << 6]() { return new Foo }
            ~~~~~~~~
!!! error TS2411: Property '[1 << 6]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.
        set [1 << 6](p: Foo2) { }
    }